--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Landing page moderna e responsiva com formulário de contato">
-    <title>Landing Page - Transforme Sua Ideia em Realidade</title>
+    <meta name="description" content="Escrita profissional para quem precisa comunicar com clareza, propósito e autenticidade">
+    <title>Fiódor Dostoiévski - Escritor Autônomo</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,11 +15,12 @@
     <header class="header">
         <nav class="nav container">
             <div class="nav__logo">
-                <h2>CodeTria</h2>
+                <h2>Fiódor Dostoiévski</h2>
             </div>
             <ul class="nav__menu">
                 <li><a href="#inicio">Início</a></li>
                 <li><a href="#sobre">Sobre</a></li>
+                <li><a href="#servicos">Serviços</a></li>
                 <li><a href="#contato">Contato</a></li>
             </ul>
         </nav>
@@ -25,35 +29,67 @@
     <!-- Hero Section -->
     <section id="inicio" class="hero">
         <div class="hero__content container">
-            <h1 class="hero__title">Transforme Sua Ideia em Realidade</h1>
+            <h1 class="hero__title">Transforme ideias em palavras que conectam.</h1>
             <p class="hero__subtitle">
-                Soluções inovadoras para o seu negócio. Junte-se a milhares de empresas que já transformaram seus resultados.
+                Escrita profissional para quem precisa comunicar com clareza, propósito e autenticidade.
             </p>
             <button class="btn btn--primary btn--cta" onclick="scrollToForm()">
-                Começar Agora
+                Vamos conversar
             </button>
         </div>
     </section>
 
-    <!-- Features Section -->
+    <!-- Sobre / Proposta de Valor Section -->
     <section id="sobre" class="features">
         <div class="container">
-            <h2 class="section__title">Por que escolher a gente?</h2>
+            <h2 class="section__title">Escrita sob medida para projetos reais.</h2>
+            <p class="section__description">
+                Atuo como escritor autônomo desenvolvendo textos claros, objetivos e alinhados à identidade de cada projeto.
+                Do conteúdo institucional à escrita criativa, meu foco é transformar ideias em mensagens que fazem sentido para quem lê.
+            </p>
+        </div>
+    </section>
+
+    <!-- Serviços Section -->
+    <section id="servicos" class="services">
+        <div class="container">
+            <h2 class="section__title">Como posso ajudar</h2>
+            <div class="services__grid">
+                <div class="service__card">
+                    <h3>Escrita de conteúdos</h3>
+                    <p>Textos institucionais, artigos, apresentações e materiais digitais.</p>
+                </div>
+                <div class="service__card">
+                    <h3>Revisão e edição</h3>
+                    <p>Ajuste de clareza, tom, coesão e correção gramatical.</p>
+                </div>
+                <div class="service__card">
+                    <h3>Escrita estratégica</h3>
+                    <p>Conteúdos pensados para informar, engajar ou orientar decisões.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Diferenciais Section -->
+    <section id="diferenciais" class="features">
+        <div class="container">
+            <h2 class="section__title">Por que trabalhar comigo</h2>
             <div class="features__grid">
                 <div class="feature__card">
-                    <div class="feature__icon">🚀</div>
-                    <h3>Rápido e Eficiente</h3>
-                    <p>Entregamos resultados em tempo recorde, sem comprometer a qualidade.</p>
+                    <h3>Comunicação clara e objetiva</h3>
                 </div>
                 <div class="feature__card">
-                    <div class="feature__icon">💡</div>
-                    <h3>Inovação Constante</h3>
-                    <p>Utilizamos as tecnologias mais modernas para criar soluções únicas.</p>
+                    <h3>Escrita adaptada ao seu público</h3>
                 </div>
                 <div class="feature__card">
-                    <div class="feature__icon">🎯</div>
-                    <h3>Foco em Resultados</h3>
-                    <p>Nossa prioridade é o sucesso do seu negócio e a satisfação dos seus clientes.</p>
+                    <h3>Processo simples e organizado</h3>
+                </div>
+                <div class="feature__card">
+                    <h3>Entregas dentro do prazo</h3>
+                </div>
+                <div class="feature__card">
+                    <h3>Atenção aos detalhes e contexto</h3>
                 </div>
             </div>
         </div>
@@ -62,10 +98,9 @@
     <!-- CTA Section -->
     <section class="cta-section">
         <div class="container">
-            <h2 class="cta__title">Pronto para começar?</h2>
-            <p class="cta__text">Preencha o formulário abaixo e entraremos em contato em breve.</p>
+            <p class="cta__text">Cada projeto tem uma voz. Vamos encontrar a sua.</p>
             <button class="btn btn--secondary btn--cta" onclick="scrollToForm()">
-                Falar com Especialista
+                Solicitar contato
             </button>
         </div>
     </section>
@@ -73,7 +108,8 @@
     <!-- Contact Form Section -->
     <section id="contato" class="contact">
         <div class="container">
-            <h2 class="section__title">Entre em Contato</h2>
+            <h2 class="section__title">Vamos falar sobre seu projeto</h2>
+            <p class="section__description">Conte um pouco sobre sua ideia e entrarei em contato para entender como posso ajudar.</p>
             <form id="contactForm" class="contact__form">
                 <!-- Nome -->
                 <div class="form__group">
@@ -136,7 +172,7 @@
 
                 <!-- Submit Button -->
                 <button type="submit" class="btn btn--primary btn--submit">
-                    <span id="submitText">Enviar Mensagem</span>
+                    <span id="submitText">Enviar mensagem</span>
                     <span id="submitLoader" class="loader" style="display: none;"></span>
                 </button>
             </form>
@@ -146,7 +182,8 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 CodeTria. Todos os direitos reservados.</p>
+            <p>Codetria — Soluções Digitais & Desenvolvimento Web</p>
+            <p>Projeto de landing page para profissional autônomo.</p>
         </div>
     </footer>
 
